Iterate Over the Items (Not the Operands) of a Literal Sequence

The current code iterates over the (empty) list of operands of a Literal
Sequence, ignoring any items in it, so Literal Sequences are always
ignored in the ExpressionSequence.

Task-number: QTBUG-35897
Change-Id: I60341ac21c8e3b77bf6d8dfeebdbafe010844406
Reviewed-by: Erik Verbruggen <erik.verbruggen@theqtcompany.com>